--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "sass": "^1.56.1",
         "vite": "^4.0.0",
         "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "croppie": "^2.6.5"
     }
 }
