--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
-        "croppie": "^2.6.5"
+        "croppie": "^2.6.5",
+        "dropzone": "^6.0.0-beta.2"
     }
 }
